Update README.md, favicon and font size

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     rel="stylesheet">
   <link rel="stylesheet" href="style.css">
   <script src="script.js" defer></script>
+  <link rel="icon" type="image/x-icon" href="favicon.png">
   <title>ETCH A SKETCH</title>
 </head>
 
