Update checkbox and default container size

--- a/index.html
+++ b/index.html
@@ -52,7 +52,8 @@
           <input id="range" type="range" min="1" max="64">
         </div>
         <div class="line-switch"> <input type="checkbox" checked id="grid-lines" value="on">
-          Grid lines</div>
+          <label for="grid-lines">Grid lines</label>
+        </div>
       </div>
     </div>
     <div id="container"></div>
@@ -61,3 +62,4 @@
 </body>
 
 </html>
+
